--- a/gdm/templates/base.html
+++ b/gdm/templates/base.html
@@ -2,12 +2,62 @@
 <html>
     <head>
         <title>GDM - Gerador de Mapas</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         {% load staticfiles %}
-        <link rel="stylesheet" type="text/css" href="{% static 'visualize/style.css' %}" />
-    </head>
+        <link rel="stylesheet" type="text/css" href="{% static 'sistema/css/bootstrap.min.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'sistema/css/bootstrap-theme.min.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'sistema/css/dashboard.css' %}" />
+                <link rel="stylesheet" type="text/css" href="{% static 'sistema/css/style.css' %}" />
+    </head> 
 
     <body>
-    {% block content %}
-    {% endblock %}
+      
+      <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">GDM</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Dashboard</a></li>
+              <li><a href="#">Settings</a></li>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Help</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+              <input type="text" class="form-control" placeholder="Search...">
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row">
+
+          <div class="col-sm-3 col-md-2 sidebar"> 
+            <h4>{% block title-sidebar %}{% endblock %}</h4>
+            <ul class="nav nav-sidebar">
+              {% block sidebar %}
+              {% endblock %}
+            </ul>
+          </div>
+
+          <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            {% block content %}
+            {% endblock %}
+          </div>
+
+        </div>
+      </div>
+
+      <script src="{% static 'sistema/js/jquery.min.js' %}"></script> 
+      <script src="{% static 'sistema/js/bootstrap.min.js' %}"></script> 
     </body>
+    
 </html>
