--- a/gdm/templates/sistema/consultas.html
+++ b/gdm/templates/sistema/consultas.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
+
+{% block sidebar %}
+    {% if projeto.consulta_set %}
+      {% for consulta in projeto.consulta_set.all %}
+          <li>
+            <!-- <a href="{% url 'sistema:projetos' projeto.id %}"> -->
+              {{ consulta }}
+            <!-- </a> -->
+          </li>
+      {% endfor %}
+    {% else %}
+      <li>Consultas</li>
+    {% endif %}
+{% endblock %}
+
 {% block content %}
-
-  {% if projeto.consulta_set %}
-    <ul>
-    {% for consulta in projeto.consulta_set.all %}
-        <li>
-          <!-- <a href="{% url 'sistema:projetos' projeto.id %}"> -->
-            {{ consulta }}
-          <!-- </a> -->
-        </li>
-    {% endfor %}
-    </ul>
-  {% else %}
-    <p>Sem consultas no momento</p>
-  {% endif %}
-
 {% endblock %}
