--- a/gdm/templates/sistema/index.html
+++ b/gdm/templates/sistema/index.html
@@ -11,9 +11,9 @@
     {% endfor %}
   {% else %}
     <li>Usuarios</li>
-  {% endif %} 
-
+  {% endif %}  
 {% endblock %}
 
 {% block content %}
+lLAALAL
 {% endblock %}
