--- a/gdm/templates/sistema/projetos.html
+++ b/gdm/templates/sistema/projetos.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title-sidebar %}Projetos{% endblock %}
 
@@ -8,7 +9,7 @@
           <li>
             <a href="{% url 'sistema:consultas' projeto.id %}">
               {{ projeto }}
-            </a>
+            </a> 
           </li>
       {% endfor %} 
     {% else %}
@@ -18,16 +19,70 @@
 
 {% block content %}
   <div id="content">
+
     <h2>Projetos {{ user.projeto_set.first }}</h2>
+
     <div class="consultas">
       {% for consulta in user.projeto_set.first.consulta_set.all %}
         <li>
         {{ consulta }}
         </li>
       {% endfor %}
-      <div class="mapa">
-        MAPA
-      </div>
     </div>
-  </div>
+
+    <div class="mapa">
+      MAPA
+    </div>
+
+  </div> 
+
+
+
+  <div class="modal fade" id="conexao">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Conexão com servidor</h4>
+        </div>
+
+        <div class="modal-body">
+            
+          <div class="conexao">
+            <form role="form" action="{% url 'sistema:conecta' %}" id="formularioConexao" method="post" data-remote=true>
+              {% csrf_token %} 
+              <div class="form-group">
+                <label>Banco de dados</label>
+                <input type="text" name="bd" class="form-control" />
+              </div>
+
+              <div class="form-group">
+                <label>Usuário</label>
+                <input type="text" name="user" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label>Senha</label>
+                <input type="password" name="pass" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label>Host</label>
+                <input type="text" name="host" class="form-control" />
+              </div>
+            </form>  
+          </div>
+
+        </div>
+        
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="btnConectar">Conectar</button>
+        </div>
+
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+
+  <script src="{%  static 'sistema/js/projetos.js' %}"></script>   
 {% endblock %}
