Adicionando oportunidade de realizar consulta

--- a/gdm/templates/base.html
+++ b/gdm/templates/base.html
@@ -53,6 +53,9 @@
             {% endblock %}
           </div>
 
+          {% block includes %}
+          {% endblock %}
+
         </div>
       </div>
 
