--- a/gdm/templates/sistema/projetos.html
+++ b/gdm/templates/sistema/projetos.html
@@ -43,7 +43,7 @@
     <div class="consultas">
       {% for consulta in projeto.consulta_set.all %}
         <li>
-        {{ consulta }}
+        <a href="{% url 'sistema:consulta' consulta.id%}">{{ consulta }}</a>
         </li>
       {% endfor %}
     </div>
