--- a/gdm/templates/sistema/modal_consulta.html
+++ b/gdm/templates/sistema/modal_consulta.html
@@ -19,6 +19,11 @@
                 <input type="text" name="consulta" class="form-control" />
               </div>
 
+              <div class="form-group">
+                <label>Propriedades</label>
+                <input type="text" name="propriedades" class="form-control" />
+              </div>
+
               <input type="hidden" name="projeto_id" class="form-control" value="{{projeto.id}}"/>  
             </form>  
 
