Trabalhando nas funções sobre o mapa

--- a/gdm/static/sistema/css/style.css
+++ b/gdm/static/sistema/css/style.css
@@ -3,3 +3,6 @@
   height: 400px; 
   margin: 10px 0 0; 
 }
+.nav-pills li,.nav-pills li.disabled , .nav-pills li a{
+  cursor: pointer !important;
+}
