--- a/gdm/templates/base.html
+++ b/gdm/templates/base.html
@@ -28,12 +28,9 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Dashboard</a></li>
+              <li><a href="#" data-toggle="modal" data-target="#consulta">Nova consulta</a></li>
               <li><a href="#">Settings</a></li> 
-            </ul>
-            <form class="navbar-form navbar-right">
-              <input type="text" class="form-control" placeholder="Search...">
-            </form>
+            </ul> 
           </div>
         </div>
       </div>
