--- a/gdm/templates/sistema/projetos.html
+++ b/gdm/templates/sistema/projetos.html
@@ -36,22 +36,28 @@
 
     <h2>
       Projetos {{ projeto }}
-      &nbsp;&nbsp;&nbsp;<button class="btn btn-primary" data-toggle="modal" data-target="#consulta">Nova consulta </button>
     </h2>
     
 
-    <div class="consultas">
-      {% for consulta in projeto.consulta_set.all %}
-        <li>
-          <a href="{% url 'sistema:consulta' consulta.id%}">{{ consulta }}</a>
-        </li>
-      {% endfor %}
+    <div class="consultas col-md-10">
+      <ul class="nav nav-pills">
+        {% for consulta in projeto.consulta_set.all %}
+          <li>
+            <a data-href="{% url 'sistema:consulta' consulta.id%}" class="active" data-name="{{ consulta }}" >{{ consulta }}</a>
+          </li>
+        {% endfor %}
+      </ul>
+      <!-- <button class="btn btn-primary" data-toggle="modal" data-target="#consulta">Nova consulta </button> -->
     </div>
 
-    <div id="map" class="mapa smallmap olMap"> 
+    <div class="col-md-10">
+      <div id="map" class="mapa smallmap olMap "> 
+      </div>
     </div>
 
+    <div style="clear: both;"></div>
   </div> 
+
 
 {% endblock %}
 
