Manipulando as consultas

--- a/gdm/templates/base.html
+++ b/gdm/templates/base.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="{% static 'sistema/theme/default/style.css' %}" type="text/css"> 
         <script src="{% static 'sistema/js/jquery.min.js' %}"></script> 
         <script src="{% static 'sistema/js/bootstrap.min.js' %}"></script> 
+        <script src="http://malsup.github.com/jquery.form.js"></script> 
     </head> 
 
     <body>
@@ -28,8 +29,7 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#" data-toggle="modal" data-target="#consulta">Nova consulta</a></li>
-              <li><a href="#">Settings</a></li> 
+              <li><a href="#" data-toggle="modal" data-target="#consulta">Nova consulta</a></li> 
             </ul> 
           </div>
         </div>
